added health endpoint
